fix(WikiEditor): 🐛 remove citizen-sticky-header; add flex-wrap

--- a/skinStyles/extensions/WikiEditor/ext.wikiEditor.less
+++ b/skinStyles/extensions/WikiEditor/ext.wikiEditor.less
@@ -18,10 +18,8 @@
 		border: 0;
 	}
 
-	// Make into sticky header
 	.wikiEditor-ui-top {
 		border-bottom: 0; /* Bottom border is implemented with box shadow */
-		.citizen-sticky-header;
 	}
 
 	.wikiEditor-ui-right {
@@ -132,6 +130,8 @@
 
 	/* Groups */
 	.group {
+		flex-wrap: wrap;
+
 		/* Toolbar */
 		.label {
 			height: 38px;
